Fix spacing and footers

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ h1 {
 }
 p {
     font-size: 0.92em;
-    line-height: 0.5em;
+    line-height: normal;
     color: #333;
 }
 footer {
